@@ -40,6 +40,7 @@ sizes 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23
 anysize
 allpunct
 afmfonts
+lc_ctype
 res 3600
 hor 1
 vert 1
